<resources>
    <!-- App Name-->
    <string name="app_name">Template</string>

    <!-- Ads Keys -->
    <string name="key_admob" translatable="false">123456789</string>
    <string name="key_adview" translatable="false">123456789</string>
    <string name="key_interstitial" translatable="false">123456789</string>

    <!-- About Us -->
    <string name="about_follow" translatable="false">Follow Us:</string>
    <string name="about_company" translatable="false">Arte al Programar</string>
    <string name="about_username" translatable="false">\@arteaprogramar</string>
    <string name="about_youtube_channel" translatable="false">Arte al Programar</string>
    <string name="about_youtube_url" translatable="false">https://www.youtube.com/channel/UCh94p1M7dg1y9f_Yik1vGjw</string>
    <string name="about_objetive">Objetive</string>
    <string name="about_app_info">App Information</string>
    <string name="about_company_description">Development of Mobile Applications for solving everyday problems.</string>
    <string name="about_msg">Hello Dear User! I invite you to meet us.</string>

    <!-- Settings Preferences -->
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Select Theme</string>

    <!-- Preferences Keys -->
    <string name="key_pref_theme" translatable="false">key_pref_theme</string>

    <!-- Warning -->
    <string name="war_number_request">Number Required</string>

    <!-- Buttons Actions -->
    <string name="start">Start</string>
    <string name="internet_not_access">No Internet Connection</string>

    <!-- App Titles (Toolbar) -->
    <string name="nav_drawer_open">open</string>
    <string name="nav_drawer_close">close</string>
    <string name="nav_about">About Us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_legal">Legal Information</string>

</resources>
