<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">

                        <ImageView
                            android:layout_width="@dimen/recycler_image_height"
                            android:layout_height="@dimen/recycler_image_height"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/gutter_vertical"
                            android:contentDescription="@string/nav_about"
                            android:scaleType="fitXY"
                            bind:resourceImage="@{@drawable/ic_about}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/gutter_vertical"
                            android:text="@string/about_company"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/about_username"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/gutter_vertical"
                            android:text="@string/about_objetive"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/gutter_vertical"
                            android:text="@string/about_company_description"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="italic" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/gutter_vertical"
                            android:text="@string/about_follow"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/fbc"
                                style="@style/SelectableItemStyle"
                                android:layout_width="@dimen/standard_touch_size"
                                android:layout_height="@dimen/standard_touch_size"
                                android:layout_margin="@dimen/margin"
                                android:contentDescription="@string/about_company"
                                android:src="@drawable/icon_facebook" />

                            <ImageButton
                                android:id="@+id/twt"
                                style="@style/SelectableItemStyle"
                                android:layout_width="@dimen/standard_touch_size"
                                android:layout_height="@dimen/standard_touch_size"
                                android:layout_margin="@dimen/margin"
                                android:contentDescription="@string/about_company"
                                android:src="@drawable/icon_twitter" />

                            <ImageButton
                                android:id="@+id/ins"
                                style="@style/SelectableItemStyle"
                                android:layout_width="@dimen/standard_touch_size"
                                android:layout_height="@dimen/standard_touch_size"
                                android:layout_margin="@dimen/margin"
                                android:contentDescription="@string/about_company"
                                android:src="@drawable/icon_instagram" />

                            <ImageButton
                                android:id="@+id/you"
                                style="@style/SelectableItemStyle"
                                android:layout_width="@dimen/standard_touch_size"
                                android:layout_height="@dimen/standard_touch_size"
                                android:layout_margin="@dimen/margin"
                                android:contentDescription="@string/about_company"
                                android:src="@drawable/icon_youtube" />

                            <ImageButton
                                android:id="@+id/git"
                                style="@style/SelectableItemStyle"
                                android:layout_width="@dimen/standard_touch_size"
                                android:layout_height="@dimen/standard_touch_size"
                                android:layout_margin="@dimen/margin"
                                android:contentDescription="@string/about_company"
                                android:src="@drawable/icon_github" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/gutter_vertical"
                            android:text="@string/about_app_info"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/inf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/gutter_vertical" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/leg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/gutter_vertical"
                            android:text="@string/nav_legal"
                            android:theme="@style/ButtonStyle" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>